--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <div style="background-color: #41b8ff;">
-    <!--  -->
+
+    <!-- A DECOMMENTER pour le caroussel-->
     <!-- <carousel id="carousel" cellsToShow="1" overflowCellsLimit="1" loop="true" autoplay="true">
         <div class="carousel-cell">
             <img  src="../../assets/img/CARROUSELS2-scaled.jpg">
@@ -11,11 +12,15 @@
             <img src="../../assets/img/CARROUSELS4-scaled.jpg">
         </div>
     </carousel> -->
+    
+    <!-- A COMMENTER pour le caroussel-->
     <div id="carousel">
         <div class="carousel-cell">
             <img style="height: 500px; width: 100%;"  src="../../assets/img/CARROUSELS2-scaled.jpg">
         </div>
     </div>
+  <!-- -->
+  
     <div class="div-2">
         <div class="div-info">
             <div>
